<resources>
  <string name="app_name">FXingSign</string>
  <string name="url">http://www.fxingsign.com/</string>
  <string name="activity_title_user_list">Users List</string>
  <string name="activity_title_user_details">User Details</string>
  <string name="btn_text_load_data">Load Sample Data</string>
  <string name="btn_text_retry">Retry</string>
  <string name="view_text_email">Email:</string>
  <string name="view_text_followers">Followers:</string>
  <string name="view_text_description">Description:</string>
  <string name="string_content_description">Non accessible view</string>
  <string name="exception_message_generic">There was an application error</string>
  <string name="exception_message_no_connection">There is no internet connection</string>
  <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>
  <string name="no_internet_connection">No Internet connection</string>
  <string name="sign_in_cancelled">Sign in cancelled</string>
  <string name="unknown_error">Unknown Error</string>
  <string name="unknown_response">Unknown Response</string>
  <string name="login">LogIn</string>
  <string name="auth0_client_id" translatable="false">HDCACO0SodnDkLKJtEFL9Ya_Cj5gYfVA</string>
  <string name="auth0_domain">adnbal89.eu.auth0.com</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_activity_personal_positions">PersonalSignalsActivity</string>
  <string name="title_section1">Section 1</string>
  <string name="title_section2">Section 2</string>
  <string name="title_section3">Section 3</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="action_example">Example action</string>
  <string name="action_settings">Settings</string>
  <string name="AppName">FxingSign</string>
  <string name="menu">Menu</string>
  <string name="personal_positions">Signals</string>
  <string name="signals">Signals</string>
  <string name="profit">Profit</string>
  <string name="authentication">Authentication</string>
  <string name="signal_history">History</string>
  <string name="personal_positions_fragment">Personal Signals Fragment</string>
  <string name="signals_fragment">Signals Fragment</string>
  <string name="profit_fragment">Profit Fragment</string>
  <string name="signal_history_fragment">History Fragment</string>
  <string name="title_personal_positions">Personal Signals</string>
  <string name="my_account">My Account</string>
  <string name="title_account">My Account</string>
  <string name="settings">Settings</string>
  <string name="position_buy">Buy</string>
  <string name="position_sell">Sell</string>
  <string name="signal_buy">Buy</string>
  <string name="signal_sell">Sell</string>
  <string name="btn_text_personal_positions">Personal Signals</string>
  <string name="btn_text_signals">Signals</string>
  <string name="text_extend_membership">Extend Membership</string>
  <string name="text_total_profit">Total Profit</string>
  <string name="text_dialog_view_title">Unfollow Signal ?</string>
  <string name="text_dialog_view_content">Do you want to unfollow this position ?</string>
  <string name="text_dialog_history_view_title">Closed Signal Details</string>
  <string name="text_dialog_history_view_content">Closed position details</string>
  <string name="text_dialog_view_position_title">Signal Comment</string>
  <string name="text_dialog_view_signal_title">Signal Comment</string>
  <string name="text_dialog_view_comment_content">Signal Comment</string>
  <string name="text_dialog_no_content_title">No comment</string>
  <string name="text_dialog_view_no_comment_content">No comment found</string>
  <string name="text_dialog_open_signal_view_title">Follow Signal</string>
  <string name="text_dialog_open_signal_view_content">Are you sure to follow this signal ?</string>
  <string name="text_dialog_close_signal_view_title">Unfollow Signal</string>
  <string name="text_dialog_close_signal_view_content">Are you sure to unfollow this position ?</string>
  <string name="text_dialog_view_OK">Confirm Edit</string>
  <string name="text_OK">OK</string>
  <string name="text_dialog_view_Edit_Signal">Edit Signal</string>
  <string name="text_dialog_view_Close_Signal">Close Signal</string>
  <string name="text_dialog_view_Cancel">Cancel</string>
  <string name="add_new_Signal">Add New Signal</string>
  <string name="ok">OK</string>
  <string name="close_signal">Close Signal ?</string>
  <string name="text_dialog_close_signal">Are you sure you want to close this signal ? </string>
  <string name="text_dialog_view_Edit_Signal_content">Are you sure you want to confirm editing this signal ? </string>
  <string name="pleaseFillRequiredFields">Please fill required fields to proceed.</string>
  <string name="add_confirmed">Signal add completed.</string>
  <string name="toast_dialog_confirmed">Signal unfollowed</string>
  <string name="text_signal_opened">Signal followed</string>
  <string name="text_signal_closed">Signal unfollowed</string>
  <string name="signal_closed">Closed</string>
  <string name="closingPriceMustBeNumeric">Closing price must be numeric. Field contains invalid characters. Please correct!.</string>
  <string name="text_membership_deadline">Your subscription period ends in : </string>
  <string name="subscriptions">Available Subscriptions</string>
  <string name="use_case_title_skus">Use case #3. List of SKUs</string>
  <string name="use_case_desc_skus">Show a list of SKUs available for purchase. Click an item to purchase or consume it</string>
  <string name="icon">icon</string>
  <string name="use_case_title_subscriptions">Use case #4. Subscriptions</string>
  <string name="use_case_desc_subscriptions">Show a list of subscriptions. Allow buying a subscription and changing it</string>
  <string name="change">Change</string>
  <string name="_1_buy">1. Buy</string>
  <string name="_2_select">2. Select</string>
  <string name="_3_change">3. Change</string>
  <string name="buy">Buy</string>
  <string name="label_google_sign_in">Firebase + Google Sign In</string>
  <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
  <string name="label_facebook_login">Firebase + Facebook Login</string>
  <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
  <string name="label_twitter_login">Firebase + Twitter Login</string>
  <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
  <string name="label_emailpassword">Email/Password Authentication</string>
  <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
  <string name="label_phone_auth">Phone Number Authentication</string>
  <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
  <string name="label_anonymous_auth">Anonymous Authentication</string>
  <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
  <string name="label_custom_auth">Custom Authentication</string>
  <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
  <string name="label_firebase_ui">FirebaseUI Auth</string>
  <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
  <string name="hint_user_id">User ID</string>
  <string name="get_custom_token">Get Token</string>
  <string name="sign_in">SIGN IN</string>
  <string name="create_account">Create Account</string>
  <string name="sign_out">SIGN OUT</string>
  <string name="verify_email">Verify Email</string>
  <string name="disconnect">Disconnect</string>
  <string name="loading">Loading…</string>
  <string name="custom_token">Custom Token</string>
  <string name="signed_in">Signed In</string>
  <string name="signed_out">Signed Out</string>
  <string name="token_null">Token: null</string>
  <string name="hint_email">Email</string>
  <string name="hint_password">Password</string>
  <string name="desc_firebase_lockup">Firebase logo and name</string>
  <string name="auth_failed">Authentication failed</string>
  <string name="start_phone_auth">Start</string>
  <string name="verify_phone_auth">Verify</string>
  <string name="resend_phone_auth">Resend</string>
  <string name="hint_phone_number">Phone Number</string>
  <string name="hint_verification_code">Verification Code</string>
  <string name="status_code_sent">Code Sent</string>
  <string name="status_verification_failed">Verification failed</string>
  <string name="status_verification_succeeded">Verification succeeded</string>
  <string name="status_sign_in_failed">Sign-in failed</string>
  <string name="instant_validation">(instant validation)</string>
  <string name="firebase_status_fmt">Firebase User: %s</string>
  <string name="firebase_user_management">Firebase User Management</string>
  <string name="google_status_fmt">Google User: %s</string>
  <string name="google_title_text">Google Sign In</string>
  <string name="facebook_status_fmt">Facebook User: %s</string>
  <string name="facebook_title_text">Facebook Login</string>
  <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
  <string name="emailpassword_title_text">Email and Password</string>
  <string name="phone_title_text">Phone Number</string>
  <string name="twitter_status_fmt">Twitter User: %s</string>
  <string name="twitter_title_text">Twitter Login</string>
  <string name="firebaseui_status_fmt">Firebase User: %s</string>
  <string name="firebaseui_title_text">FirebaseUI Auth</string>
  <string name="id_fmt">User ID: %s</string>
  <string name="email_fmt">Email: %s</string>
  <string name="facebook_application_id" translatable="false">1585990171420088</string>
  <string name="fb_login_protocol_scheme" translatable="false">fb1585990171420088</string>
  <string name="drawer_open">Open navigation drawer</string>
  <string name="drawer_close">Close navigation drawer</string>
  <string name="open_pos">Follow Signal</string>
  <string name="close_pos">Unfollow Signal</string>
  <string name="comment_pos">Show Comment</string>
  <string name="edit_signal">Edit Signal</string>
  <string name="alreadyownpurchase">You already own a subscription</string>
  <string name="purchasedSubscription">You are already subscribed to </string>
  <string name="revenuesQuarters">Revenue Quarters(pips)</string>
  <string name="in_pips">(in pips)</string>
  <string name="expiryTimeComment">Your free trial ends in : </string>
  <string name="days"> days</string>
  <string name="seeActiveSubcriptions">You can see your active subscription below.</string>
  <string name="twitter_consumer_key" translatable="false">YOURCONSUMERKEY</string>
  <string name="pair">Pair : </string>
  <string name="buy_sell">Buy / Sell : </string>
  <string name="opening_price">Opening Price : </string>
  <string name="closing_price">Closing Price : </string>
  <string name="stop_loss_price">Stop-Loss Price : </string>
  <string name="take_profit_price">Take-Profit Price : </string>
  <string name="comment">Comment : </string>
  <string name="hint_openingPrice">Type position start price</string>
  <string name="hint_closingPrice">Type only if you are closing this signal</string>
  <string name="hint_stop_loss_price">Type Stop-loss price (if any)</string>
  <string name="hint_take_profit_price">Type Take-Profit price (if any)</string>
  <string name="hint_comment">Type your comment (if any)</string>
  <string name="hit_stop_loss_question">Hit SL ?</string>
  <string name="hit_take_profit_question">Hit TP ?</string>
  <string name="hint_check_if_sl">Check if Hit SL while closing pos.</string>
  <string name="hint_check_if_tp">Check if Hit TP while closing pos.</string>
</resources>