<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  >

  <item
    android:id="@+id/action_personal_positions"
    android:enabled="true"
    android:icon="@drawable/ic_personal_positions"
    android:title="@string/personal_positions"
    app:showAsAction="ifRoom"
    />

  <item
    android:id="@+id/action_signals"
    android:enabled="true"
    android:icon="@drawable/ic_signals"
    android:title="@string/signals"
    app:showAsAction="ifRoom"
    />

  <item
    android:id="@+id/action_profit"
    android:enabled="true"
    android:icon="@drawable/ic_profit"
    android:title="@string/profit"
    app:showAsAction="ifRoom"
    />

  <item
    android:id="@+id/action_history"
    android:enabled="true"
    android:icon="@drawable/ic_history"
    android:title="@string/signal_history"
    app:showAsAction="ifRoom"
    />
</menu>