<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Copyright (C) 2017 Adnan BAL Open Source Project
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  * http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_item_signals_fragment"
      android:icon="@drawable/ic_signals"
      android:title="@string/signals"/>
    <item
      android:id="@+id/nav_item_profit_fragment"
      android:icon="@drawable/ic_history"
      android:title="@string/profit"/>
    <item
      android:id="@+id/nav_item_my_account_fragment"
      android:icon="@drawable/ic_personal_positions"
      android:title="@string/my_account"/>

    <item
      android:id="@+id/nav_item_setting_fragment"
      android:icon="@drawable/ic_settings"
      android:title="@string/settings"/>


  </group>
</menu>