<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Copyright (C) 2017 Adnan BAL Open Source Project
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  * http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/grey_100"
  android:orientation="vertical"
  android:weightSum="4">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
      android:id="@+id/icon"
      style="@style/ThemeOverlay.FirebaseIcon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/desc_firebase_lockup"
      android:src="@drawable/firebase_lockup_400"/>

    <TextView
      android:id="@+id/title_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/title_bottom_margin"
      android:text="@string/emailpassword_title_text"
      android:theme="@style/ThemeOverlay.MyTitleText"/>

    <TextView
      android:id="@+id/status"
      style="@style/ThemeOverlay.MyTextDetail"
      android:text="@string/signed_out"/>

    <TextView
      android:id="@+id/detail"
      style="@style/ThemeOverlay.MyTextDetail"
      tools:text="Firebase User ID: 123456789abc"/>

  </LinearLayout>


  <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:background="@color/grey_300"
    android:gravity="center_vertical">

    <LinearLayout
      android:id="@+id/email_password_fields"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:orientation="horizontal">

      <EditText
        android:id="@+id/field_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"/>

      <EditText
        android:id="@+id/field_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
      android:id="@+id/email_password_buttons"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/email_password_fields"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:orientation="horizontal">

      <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sign_in"
        android:theme="@style/ThemeOverlay.MyDarkButton"/>

      <Button
        android:id="@+id/email_create_account_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/create_account"
        android:theme="@style/ThemeOverlay.MyDarkButton"/>
    </LinearLayout>

    <LinearLayout
      android:id="@+id/signed_in_buttons"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:orientation="horizontal"
      android:visibility="gone"
      android:weightSum="2.0">

      <Button
        android:id="@+id/sign_out_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:text="@string/sign_out"
        android:theme="@style/ThemeOverlay.MyDarkButton"/>

      <Button
        android:id="@+id/verify_email_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:text="@string/verify_email"
        android:theme="@style/ThemeOverlay.MyDarkButton"/>

    </LinearLayout>

  </RelativeLayout>

</LinearLayout>