<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_gravity="center"
  android:padding="@dimen/lv_row_padding"
  android:background="@drawable/selector_item_user"
  android:orientation="vertical"
  tools:ignore="UseCompoundDrawables"
  >

  <ImageView
    android:id="@+id/avatar"
    android:layout_width="@dimen/lv_row_icon_width"
    android:layout_height="@dimen/lv_row_icon_width"
    android:layout_gravity="center"
    android:paddingLeft="@dimen/lv_row_icon_padding"
    android:paddingRight="@dimen/lv_row_icon_padding"
    android:contentDescription="@string/string_content_description"
    android:src="@drawable/ic_launcher"
    />

  <TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:ellipsize="end"
    android:singleLine="true"
    android:text="@string/text_membership_deadline"
    android:textColor="@android:color/black"

    android:textSize="@dimen/lv_row_text_size"
    />
  <Button
    android:id="@+id/button_extend_membership"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:text="@string/text_extend_membership"/>

</LinearLayout>
