<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_gravity="center"
  android:padding="@dimen/lv_row_padding"
  android:background="@drawable/selector_item_user"
  android:orientation="vertical"
  android:weightSum="10"
  tools:ignore="UseCompoundDrawables"
  >
  <ImageView
    android:id="@+id/avatar"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"

    android:layout_gravity="center"
    android:paddingLeft="@dimen/lv_row_icon_padding"
    android:paddingRight="@dimen/lv_row_icon_padding"
    android:contentDescription="@string/string_content_description"
    android:src="@drawable/ic_launcher"
    />

  <TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:ellipsize="end"

    android:gravity="center"
    android:singleLine="true"
    android:text="@string/text_membership_deadline"
    android:textColor="@android:color/black"
    android:textSize="@dimen/lv_row_text_size"
    />
  <Button
    android:id="@+id/button_extend_membership"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_gravity="center"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:clickable="true"
    android:text="@string/text_extend_membership"/>

  <include
    layout="@layout/view_progress"
    />
  <include
    layout="@layout/view_retry"
    />
</LinearLayout>
